RESOLVED FIXED190333
[Payment Request] Requests should be aborted after details settle when the user cancels
https://bugs.webkit.org/show_bug.cgi?id=190333
Summary [Payment Request] Requests should be aborted after details settle when the us...
Andy Estes
Reported 2018-10-06 17:22:24 PDT
[Payment Request] Requests should be aborted after details settle when the user cancels
Attachments
Patch (8.33 KB, patch)
2018-10-06 17:40 PDT, Andy Estes
no flags
Patch (8.37 KB, patch)
2018-10-06 17:55 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2018-10-06 17:40:39 PDT Comment hidden (obsolete)
Andy Estes
Comment 2 2018-10-06 17:55:37 PDT
Alex Christensen
Comment 3 2018-10-08 09:33:38 PDT
Comment on attachment 351736 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=351736&action=review > Source/WebCore/Modules/paymentrequest/PaymentRequest.cpp:668 > void PaymentRequest::whenDetailsSettled(std::function<void()>&& callback) Please use WTF::Function or WTF::CompletionHandler
Andy Estes
Comment 4 2018-10-08 09:51:07 PDT
(In reply to Alex Christensen from comment #3) > Comment on attachment 351736 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=351736&action=review > > > Source/WebCore/Modules/paymentrequest/PaymentRequest.cpp:668 > > void PaymentRequest::whenDetailsSettled(std::function<void()>&& callback) > > Please use WTF::Function or WTF::CompletionHandler Unable, unfortunately, because JSNativeStdFunction is a std::function.
WebKit Commit Bot
Comment 5 2018-10-08 10:22:29 PDT
Comment on attachment 351736 [details] Patch Clearing flags on attachment: 351736 Committed r236922: <https://trac.webkit.org/changeset/236922>
WebKit Commit Bot
Comment 6 2018-10-08 10:22:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-10-08 10:23:32 PDT
Note You need to log in before you can comment on or make changes to this bug.